# jubilant-octo-sniffle

./: .clang-format  .commit_check.py  .format_all.py  CMakeLists.txt  README.md  build.sh  toolchain.unix.cmake
common/: defines.h
local/: CMakeLists.txt  listener.cpp
remote/: CMakeLists.txt  phonehome.cpp
